--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -17,6 +17,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "Products", products_path %></li>
            </ul>
+
+<%= render "cart" %> 
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav> 
