--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,12 @@
   </head>
   <body>
 
-      <%= render "nav" %>
+    <%= render "nav" %>
+
     <div class='container'>
+
+      <%= content_tag :div, notice, class: "bg-success" %> 
+      <%= content_tag :div, alert, class: "bg-danger" %> 
       <%= yield %>
     </div>
 
