--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,8 +1,10 @@
-
 %h1= @product.name
 
 %p= number_to_currency @product.price
 %p= image_tag @product.image, height: "300"
+%p= @product.category.name
+
+%p= button_to "Add to cart", add_cart_path, method: :post, class: "btn btn-primary"
 
 %p
   = link_to 'Edit', edit_product_path(@product)
